RESOLVED FIXED39743
[Qt] qt_instance.h has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39743
Summary [Qt] qt_instance.h has coding-style errors
Anders Bakken
Reported 2010-05-26 09:30:56 PDT
WebCore/bridge/qt/qt_instance.h:20: #ifndef header guard has wrong style, please use: qt_instance_h [build/header_guard] [5] Total errors found: 1 in 1 files
Attachments
Patch that fixes the coding style issues (1002 bytes, patch)
2010-05-26 09:51 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 09:51:26 PDT
Created attachment 57105 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:38:25 PDT
QtTriaged
WebKit Commit Bot
Comment 3 2010-05-27 13:14:31 PDT
Comment on attachment 57105 [details] Patch that fixes the coding style issues Clearing flags on attachment: 57105 Committed r60320: <http://trac.webkit.org/changeset/60320>
WebKit Commit Bot
Comment 4 2010-05-27 13:14:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.