2010-05-27  Anders Bakken  <agbakken@gmail.com>

Reviewed by David Levin.

        qt_instance.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39743

        Fix webkit coding style issues in qt_instance.h

        * bridge/qt/qt_instance.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@60320 bbb929c8-8fbe-4397-9dbb-9b2b20218538